2025-07-18 Franz Holzinger  <franz@ttproducts.de>
    * Compatibility 13: It works.
    * add TEMPLATE_REFUSE_PREVIEW and labels for refuse

2025-07-07 Franz Holzinger  <franz@ttproducts.de>
    * bugfix for TYPO3 8.7: replace the deprecated $GLOBALS['TSFE']->sys_page->getRecordsByField by  \TYPO3\CMS\Frontend\Page\PageRepository::getRecordsByField

2025-06-20 Franz Holzinger  <franz@ttproducts.de>
    * Compatibility 13, Breaking no. 102605: TSFE->fe_user removed

2025-01-07  Franz Holzinger  <franz@ttproducts.de>
    * Deprecation no. 97126: TCEforms removed in FlexForm

2024-12-05 Franz Holzinger  <franz@ttproducts.de>
    compatibility 13: Use JambageCom\Div2007\Compatibility\AbstractPlugin
        instead of TYPO3\CMS\Frontend\Plugin\AbstractPlugin

2024-04-14 Franz Holzinger  <franz@ttproducts.de>
    Remove file class.tx_agency.php again which is deprecated since TYPO3 8 for addPItoST43.

2024-03-81 Franz Holzinger  <franz@ttproducts.de>
    Do not use sanitizer for template file which can be in private folder.

2024-02-28 Franz Holzinger  <franz@ttproducts.de>
    Deprecation no. 87193: function compareUident removed
    Breaking no. 87193: TYPO3\CMS\Core\Crypto\PasswordHashing\SaltedPasswordService has been removed.
    Fix autologin

2024-01-24 Franz Holzinger  <franz@ttproducts.de>
    Deprecation no.81852: - Remove usage of classes
    JambageCom\Div2007\Security\TransmissionSecurity and
    JambageCom\Div2007\Security\StorageSecurity

    Deprecation no.88740: Replace hooks for felogin by events

2023-11-22 Franz Holzinger  <franz@ttproducts.de>
    compatibility 12: replace CmsBackend->pmDrawItem by PageContentPreviewRenderingListener listener
    Deprecation no.81852: - Remove dependency on rsaauth

2023-09-03 Franz Holzinger <franz@ttproducts.de>
    * compatibility TYPO3 11.5: remove FilePathSanitizer for files which are not shown directly in the front end.

2022-10-26 Franz Holzinger <franz@ttproducts.de>