@@ -1,3 +1,6 @@
+2025-08-03 Franz Holzinger  <franz@ttproducts.de>
+    * Deprecation no. 105076. Convert plugin list_type agency => CType agency
+
 2025-07-18 Franz Holzinger  <franz@ttproducts.de>
     * Compatibility 13: It works.
     * add TEMPLATE_REFUSE_PREVIEW and labels for refuse
